ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice_Period__c/Invoice_Period__c.object-meta.xml
<CustomObject>
    <description>Used to manage invoice periods for all IKOPRO Invoices.</description>
    <label>Invoice Period</label>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>Invoice Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Periods</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>