ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice_Period__c/fields/Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Date_Range__c</fullName>
    <formula>&quot;From &quot; &amp; TEXT( Invoice_Period_From__c ) &amp; &quot; to &quot; &amp; TEXT( Invoice_Period_To__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Range</label>
    <type>Text</type>
</CustomField>