ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Invoice_Period__c/fields/Invoice_Period_To__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period_To__c</fullName>
    <label>Invoice Period To</label>
    <type>Date</type>
</CustomField>